--- a/_config.yml
+++ b/_config.yml
@@ -253,7 +253,7 @@ defaults:
       author_profile: true
       share: true
       comments: true
-  # _talks
+  # _class
   - scope:
       path: ""
       type: class
