--- a/_config.yml
+++ b/_config.yml
@@ -84,6 +84,14 @@ publication_category:
   conferences:
     title: 'Conference Papers'
 
+class_category:
+  econundergrad:
+    title: 'Econ classes (undergrad)'
+  econgrad:
+    title: 'Econ classes (grad)'
+  math:
+    title: 'Math classes'    
+
 # Site Settings
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
 breadcrumbs              : false # true, false (default)
