--- a/_config.yml
+++ b/_config.yml
@@ -259,7 +259,7 @@ defaults:
     values:
       layout: single
       author_profile: true
-      share: true
+      share: false
       comments: true
   # _class
   - scope:
@@ -268,7 +268,7 @@ defaults:
     values:
       layout: single
       author_profile: true
-      share: true
+      share: false
 
 
 # Sass/SCSS
