--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -5,17 +5,17 @@
 # prevent it from being included in the site.
 
 main:
-  - title: "Publications"
-    url: /publications/
+  # - title: "Publications"
+  #   url: /publications/
 
   - title: "Class"
     url: /class/    
-        
-  - title: "Blog Posts"
-    url: /year-archive/
     
   - title: "CV"
     url: /cv/
+            
+  - title: "Blog Posts"
+    url: /year-archive/
     
   - title: "Guide"
     url: /markdown/
