--- a/_config.yml
+++ b/_config.yml
@@ -261,10 +261,20 @@ defaults:
   #     author_profile: true
   #     share: false
   #     comments: true
+
   # _class
   - scope:
       path: ""
       type: class
+    values:
+      layout: single
+      author_profile: true
+      share: false
+
+  # _class1
+  - scope:
+      path: ""
+      type: class1
     values:
       layout: single
       author_profile: true
