--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -7,6 +7,8 @@
 main:
   # - title: "Publications"
   #   url: /publications/
+    - title: "Class1"
+    url: /class1/   
 
   - title: "Class"
     url: /class/    
