--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -13,8 +13,8 @@ main:
   - title: "CV"
     url: /cv/
             
-  - title: "Blog Posts"
-    url: /year-archive/
+  # - title: "Blog Posts"
+  #   url: /year-archive/
     
-  - title: "Guide"
-    url: /markdown/
+  # - title: "Guide"
+  #   url: /markdown/
