--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@
 # Basic Site Settings
 locale                   : "en-US"
 site_theme               : "default"
-title                    : "Sophia Wang"
+title                    : "Homepage"
 title_separator          : "-"
 name                     : &name "Sophia Wang"
 description              : &description "Sophomore @ UW-Madison"
