3rd year major updation

--- a/_config.yml
+++ b/_config.yml
@@ -23,10 +23,10 @@ repository               : "sophiawang0v0/academicpages.github.io"
 author:
   # Biographic information
   avatar           : "profile.jpg"
-  name             : "Haiyu Wang"
+  name             : "Haiyu (Sophia) Wang"
   pronouns         : # example: "she/her"  
-  bio              : "Sophomore, Math w Data Science & Economics Major"
-  location         : "Antarctica"
+  bio              : "Junior, Math w Data Science & Economics w Honors"
+  location         : "Madison"
   employer         : "University of Wisconsin - Madison"
   uri              : # URL
   email            : "hwang2333@wisc.edu" 
